--- a/components/Team.css
+++ b/components/Team.css
@@ -93,7 +93,7 @@ body {
     height: 400px;
   }
   .card > .content {
-    top: 175px;
+    top: 312px;
   }
   .card:hover > .content {
     top: 175px;
@@ -109,5 +109,23 @@ body {
   }
   .card .img {
     height: 25rem;
+  }
+  .card::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+      180deg,
+      rgba(255, 255, 255, 0) 0%,
+      rgba(0, 0, 0, 0.408) 62.83%,
+      rgba(0, 0, 0, 0.8) 99.99%
+    );
+    background-blend-mode: darken, normal;
+  }
+  .card:hover > .content {
+    top: 165px;
   }
 }
